Minor text change

--- a/libs/jade/post-tool-3.jade
+++ b/libs/jade/post-tool-3.jade
@@ -44,7 +44,7 @@ block content
 						| A1 1AA
 
 						p
-						| Please accept this communication as instructions to remove the above address from delivering all unaddressed items.
+						| Please accept this communication as instructions to remove the above address from receiving all unaddressed items.
 						p
 						| I understand that I may miss information from local or national government or other publications that are sent using this service.
 
