Update text on mockup to be more generic

--- a/libs/jade/post-tool-2.jade
+++ b/libs/jade/post-tool-2.jade
@@ -26,7 +26,7 @@ block content
 		.flex-container
 			.flex-row
 				.form.col-xs-12.col-md-4
-					p Fill in your details, and we’ll email Royal Mail, Direct Marketing Association and The Mailing Preference Service for you.
+					p Fill in your details, and we’ll email the mailing services you selected, where possible, and provide a letter to download and contact for any service that does not accept emails.
 					fieldset
 						label(for="standardField") Full name
 						input#standardField(placeholder="", type="text" required)
