--- a/libs/jade/post-tool-3.jade
+++ b/libs/jade/post-tool-3.jade
@@ -26,7 +26,7 @@ block content
 		.flex-container
 			.flex-row
 				.form.col-xs-12.col-md-4
-					p This is what your email to Royal Mail, Direct Marketing Association and The Mailing Preference Service will look like.
+					p This is what your email to the mailing services you selected will look like.
 					p You can go back and make changes if you need to.
 
 					a.btn-light.left-button-icon(href="post-tool-2.html") Edit
