--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -31,19 +31,19 @@ body{
 a {
 	border: none;
 	text-decoration: underline;
-    &:after {
-    	content: " (" attr(href) ") ";
-    	font-size: 0.8em;
-    	font-weight: normal;
-    	color: @gray-4;
-    }
-    &.main-header__logo:after,
+	&:after {
+		content: " (" attr(href) ") ";
+		font-size: 0.8em;
+		font-weight: normal;
+		color: @gray-4;
+	}
+	&.main-header__logo:after,
 	&[href^="javascript:"]:after,
 	&[href^="#"]:after {
-    	content: "";
-    	text-decoration: none;
-    }
-    img {
+		content: "";
+		text-decoration: none;
+	}
+	img {
 		border-style: none;
 	}
 }
@@ -218,4 +218,18 @@ img[src="/Global/Migrated_Images/bmis/dl-icon.gif"] {
 
 .toc-legacy__num {
 	padding-left: 1em;
+}
+
+.main-header__logo {
+	display: block;
+	background-color: @white !important;
+	margin: 0;
+	width: 100%;
+	padding: 1rem;
+	img {
+		display: block;
+	}
+	img.main-header__img--mobile {
+		display: block;
+	}
 }
