--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -21,12 +21,19 @@
     border-top: @gray-7 1px solid;
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
+    line-height: 2rem;
     color: @gray-2;
     a {
         border-bottom: transparent;
+        padding-right: 1rem;
     }
     p {
-        margin: 0;
+        font-size: @font-size-small;
+        line-height: 1.5rem;
+        a {
+            border-bottom: transparent;
+            padding-right: 0;
+        }
     }
  }
 
