--- a/libs/template/toolbar.jade
+++ b/libs/template/toolbar.jade
@@ -3,7 +3,7 @@
 	button#showSimpleModal.btn-secondary.btn-small(type="button")
 		span.screenreader This advice is for
 		| England
-	button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
+	button.toolbar-button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Share this advice
 	button.toolbar-button.a-social-print(href="javascript:window.print();", data-track="Print") Print
 	if toolbarsadviser
 		button.toolbar-button.a-social-references(href="#!", data-track="References") References
