--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -136,7 +136,9 @@
     .icon;
     display: inline-block;
     padding: 0 0.5em 0 0;
-    font-size: 115%;
+    font-size: 150%;
+    bottom: -3px !important;
+    position: relative;
 }
 
 .a-social-facebook:before {
