--- a/libs/template/sharebar.jade
+++ b/libs/template/sharebar.jade
@@ -1,5 +1,5 @@
 .title__subheading--footer
-	p Share this page (#[a(#) find out more about sharing])
+	p Share this page. #[a(#) Find out more about sharing.]
 	a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
 	a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
 	a.a-social-google-plus(href="https://plus.google.com/share?url=", data-track="Google+", rel="external") Google Plus
