--- a/libs/jade/footer.jade
+++ b/libs/jade/footer.jade
@@ -12,4 +12,5 @@ block breadcrumbs
 block content
 	.articleContent.row
 		.span8-md
+			p Updating the design, layout and content of the footer.
 			p Don't look here, look down there.
