--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -264,7 +264,8 @@ html.no-js
 					p Is there anything wrong with this page? #[a(href="#") Let us know].
 
 			#footer.main-footer(data-track-zone="footer")
-				.main-footer__content.flex-row.js-equal-height
+				.main-content
+					.main-footer__content.flex-row.js-equal-height
 					.main-footer__box.col-md-3.col-sm-6
 						h2 Advice
 						ul.li--arrow
