--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -264,91 +264,63 @@ html.no-js
 					p Is there anything wrong with this page? #[a(href="#") Let us know].
 
 			#footer.main-footer(data-track-zone="footer")
-				.main-content
-					.main-footer__content.flex-row.js-equal-height
-					.main-footer__box.col-md-3.col-sm-6
-						h2 Advice
-						ul.li--arrow
-							li
-								a(href="#") Benefits
-							li
-								a(href="#") Work
-							li
-								a(href="#") Debt and money
-							li
-								a(href="#") Consumer
-							li
-								a(href="#") Relationships
-							li
-								a(href="#") Housing
-							li
-								a(href="#") Law and rights
-							li
-								a(href="#") Discrimination
-							li
-								a(href="#") Tax
-							li
-								a(href="#") Healthcare
-							li
-								a(href="#") Education
-							li
-								a(href="#") A to Z of advice
+				.flex-container.main-content
+					.col-md-9.col-sm-9.flex-container(style="padding:0 !important;")
+						.main-footer__box.col-md-12.col-sm-12(style="padding:0 !important;")
+							h3(style="border-bottom:1px solid #fff; padding:0 0 1rem 0;") Advice
+						.main-footer__box.col-md-4.col-sm-4(style="padding:0 !important;")
+							ul.li--arrow
+								li
+									a(href="#") Benefits
+								li
+									a(href="#") Work
+								li
+									a(href="#") Debt and money
+								li
+									a(href="#") Consumer
 
-					.main-footer__box.col-md-3.col-sm-6
-						h2 Resources and tools
-						ul.li--arrow
-							li
-								a(href="#") Budgeting tool
-							li
-								a(href="#") Advice fact sheets
-							li
-								a(href="#") Advice online, by phone and in person
+						.main-footer__box.col-md-4.col-sm-4(style="padding:0 !important;")
+							ul.li--arrow
+								li
+									a(href="#") Relationships
+								li
+									a(href="#") Housing
+								li
+									a(href="#") Law and rights
+								li
+									a(href="#") Discrimination
 
-					.main-footer__box.col-md-3.col-sm-6
-						h2 More from us
-						ul.li--arrow
-							li
-								a(href="#") About us
-							li
-								a(href="#") Annual reports
-							li
-								a(href="#") Contact us
-							li
-								a(href="#") Complaints
-							li
-								a(href="#") Blogs
-							li
-								a(href="#") Campaigns
-							li
-								a(href="#") Media
-							li
-								a(href="#") Policy research
-							li
-								a(href="#") Support us
-							li
-								a(href="#") Volunteering
-							li
-								a(href="#") Jobs
+						.main-footer__box.col-md-4.col-sm-4(style="padding:0 !important;")
+							ul.li--arrow
+								li
+									a(href="#") Tax
+								li
+									a(href="#") Healthcare
+								li
+									a(href="#") Education
+								li
+									a(href="#") A to Z of advice
 
-					.main-footer__box.col-md-3.col-sm-6
-						h2 About Citizens Advice
-						ul.li--arrow
-							li
-								a(href="#") How we provide advice
-							li
-								a(href="#") The difference we make
-							li
-								a(href="#") Support us
-							li
-								a(href="#") How Citizens Advice works
-							li
-								a(href="#") Accessibility
-							li
-								a(href="#") Disclaimer and copyright
-							li
-								a(href="#") Privacy and cookies
+					.col-md-3.col-sm-3.flex-container(style="padding:0;")
+						.main-footer__box.col-md-12.col-sm-12(style="padding:0 !important;")
+							h3(style="border-bottom:1px solid #fff; padding:0 0 1rem 0;")  Information
+						.main-footer__box.col-md-12.col-sm-12(style="padding:0 !important;")
+							ul.li--arrow
+								li
+									a(href="#") Help
+								li
+									a(href="#") Cymraeg
+								li
+									a(href="#") Terms and conditions
+								li
+									a(href="#") Privacy and cookies
 
-					.main-footer__box.main-footer__box--copyright
+
+					.main-footer__box.main-footer__box--copyright(style="padding:1rem 0 !important;")
+						//div(style="padding:0.5rem 0;") 
+							p(style="font-size:0.875rem;")
+								| Accessibility  |  Cymraeg  |  Disclaimer and copyright  |  Privacy and cookies  |  Contact us
+
 						div
 							p(style="font-size:0.875rem;")
 								img(alt="", height="70", src="images/ca-logo_100px.svg", width="70")
