Add adviser only content to no-print class

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -19,7 +19,6 @@ body{
 .no-print {
 	display: none !important;
 }
-
 .print-only {
 	display: block !important;
 }
@@ -72,6 +71,8 @@ abbr[title]:after {
 .section-notice,
 .collapse-toggle-close,
 .revealable__close,
+.callout--adviser,
+.dap-panel--adviser
 #overview,
 nav,
 aside,
