Update input:valid pseudo class

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -20,12 +20,25 @@ form small {
 .invalid {
     padding-top: @box-spacing/4;
     clear: both;
+    display: none;
 }
 .valid {
     color: @green;
 }
 .invalid {
     color: @red;
+}
+input {
+    &:valid {
+        .valid {
+            display: inline-block;
+        }
+    }
+    &:invalid {
+        .invalid {
+            display: inline-block;
+        }
+    }
 }
 
 fieldset,
