Remove footer pattern from template

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -20,7 +20,7 @@ form small {
 .invalid {
     padding-top: @box-spacing/4;
     clear: both;
-    display: none;
+//    display: none;
 }
 .valid {
     color: @green;
