Update footer template

--- a/libs/jade/footer.jade
+++ b/libs/jade/footer.jade
@@ -106,10 +106,10 @@ html.no-js
                     p Is there anything wrong with this page? #[a(href="#") Let us know].
 
             #footer.main-footer(data-track-zone="footer")
-                .flex-container.main-content
-                    .col-md-9.col-sm-9.flex-container(style="padding:0 !important;")
+                .flex-container.main-content(style="margin-top:0.5rem;")
+                    .col-xs-12.col-md-9.flex-container(style="padding:0 1rem 0 0 !important; margin:0;")
                         .main-footer__box.flex-col-1-1(style="padding:0 !important;")
-                            h3(style="border-bottom:1px solid #fff; padding:0 0 1rem 0;") Advice
+                            h3(style="border-bottom:1px solid #fff; padding:0 0 1rem 0;") Get Advice
                         .main-footer__box.col-xs-6.col-md-4(style="padding:0 !important;")
                             ul.li--arrow
                                 li
@@ -143,10 +143,10 @@ html.no-js
                                 li
                                     a(href="#") A to Z of advice
 
-                    .col-md-3.col-sm-3.flex-container(style="padding:0;")
-                        .main-footer__box.flex-col-1-1(style="padding:0 !important;")
+                    .form.col-xs-12.col-md-3(style="padding:0;")
+                        .main-footer__box(style="padding:0 !important;")
                             h3(style="border-bottom:1px solid #fff; padding:0 0 1rem 0;")  Information
-                            .main-footer__box.col-md-12.col-sm-12(style="padding:0 !important;")
+                            .main-footer__box(style="padding:0 !important;")
                                 ul.li--arrow
                                     li
                                         a(href="#") Help
