--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -28,6 +28,7 @@ form small {
 .invalid {
     color: @red;
 }
+/* Do we want to make valid/invalid selectors inline?
 input {
     &:valid {
         .valid {
@@ -40,7 +41,7 @@ input {
         }
     }
 }
-
+*/
 fieldset,
 .form__group {
     padding: 0;
