--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -18,17 +18,39 @@ block sidebar
 block content
 	.dialog__mask(style="z-index: 2;")
 
-		.dialog.dialog--simple.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
+
+		.dialog.dialog--simple.dialog--extent-picker(role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" style="z-index: 3;")
+
 			header.dialog__header
-				h2.dialog__title#dialog-1-label
+				h2#dialog-1-label.dialog__title Where in the UK do you live?
+				button.dialog__close(type="button" data-action="close")<i aria-hidden="true" class="dialog__close-icon"></i><span class="dialog__close-text">Close</span>
+
+			.dialog__main#dialog-1-main
+				div(type="Sigma.CitizensAdvice.Web.Models.Pages.StartPage")
+					p The law can vary in different parts of the UK.
+					ul.extent-selection
+						li
+							a.btn.btn-small(href="?lang=en-GB") England
+					
+						li
+							a.btn.btn-small(href="?lang=en-NIR") Northern Ireland
+					
+						li
+							a.btn.btn-small(href="?lang=en-SCT") Scotland
+					
+						li
+							a.btn.btn-small(href="?lang=en-WLS") Wales	
+			footer.dialog__footer
+
+		//.dialog.dialog--simple.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
+			header.dialog__header
 				button.dialog__close(data-action="close", type="button")
 					i(aria-hidden="true", class="dialog__close-icon")
 					span.dialog__close-text Close
 			.dialog__main#dialog-1-main
 				div
-					h2 Choose a location
-					p Advice can vary depending on where you live.
-					p For information that could help solve your problem, please choose your location.
+					h2.dialog__title Where in the UK do you live?
+					p The law can vary in different parts of the UK.
 				ul.extent-selection
 					li
 						a.btn.btn-small(href="?lang=en-GB") England
@@ -39,6 +61,7 @@ block content
 					li
 						a.btn.btn-small(href="?lang=en-WLS") Wales
 			footer.dialog__footer
+
 
 		//.dialog.dialog--extent-picker(aria-describedby="dialog-1-main", aria-labelledby="dialog-1-label", role="alertdialog", style="z-index: 3;", tabindex="-1")
 			header.dialog__header
