--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -12,6 +12,9 @@
             overflow: visible;
             height: auto;
             white-space: normal;
+            padding: .75rem 1rem;
+            font-size: @font-size-h2;
+            margin: 0;
         }
         .dialog__close {
             position: absolute;
