Update form for referrers

--- a/libs/jade/witness-form-1.jade
+++ b/libs/jade/witness-form-1.jade
@@ -22,7 +22,7 @@ block content
 			fieldset
 				legend(for="radio") Please select if you are referring yourself for the Witness service
 				label.radio.radio--block
-					input(checked, name="radio", type="radio", value="option1")
+					input(disabled, name="radio", type="radio", value="option1")
 					| I am referring myself, family or friend
 				label.radio.radio--block
 					input(checked, name="radio", type="radio", value="option2")
