--- a/libs/jade/witness-form-4.jade
+++ b/libs/jade/witness-form-4.jade
@@ -16,12 +16,8 @@ block content
 	.articleContent
 		div
 			h2 The Witness’s contact details
-			p Please only provide contact information that we can use to contact the witness.
-
-			
-			fieldset
-				label(for="standardField") Email address
-				input(id="standardField" placeholder="" type="text")
+			.callout--alert
+				p Please only provide contact information that we can use to contact the witness.
 
 			fieldset
 				label(for="standardField") Preferred phone number
@@ -29,14 +25,16 @@ block content
 
 			fieldset
 				legend(for="radio") Can the Witness Service leave a message if there is no answer?
+				span.form-hint If unsure leave as 'No'
 				label.radio.radio--inline
-					input(name="radio", type="radio", value="option1")
+					input(name="radio2", type="radio", value="option1")
 					| Yes
 				label.radio.radio--inline
-					input(checked, name="radio", type="radio", value="option2")
+					input(checked, name="radio2", type="radio", value="option2")
 					| No
 			fieldset
 				legend(for="radio") Can the Witness Service send a text?
+				span.form-hint If unsure leave as 'No'
 				label.radio.radio--inline
 					input(name="radio", type="radio", value="option1")
 					| Yes
@@ -44,22 +42,28 @@ block content
 					input(checked, name="radio", type="radio", value="option2")
 					| No
 				
-			.well--outline
-				h3 Your address
-				fieldset
-					label.radio.radio--inline
-						input(checked, name="radio", type="radio", value="option1")
-						| Lookup address
-					label.radio.radio--inline
-						input(name="radio", type="radio", value="option2")
-						| Enter address manually
+			fieldset
+				label(for="standardField") Email address
+				input(id="standardField" placeholder="" type="text")
 
-				fieldset
-					label(for="field") Enter your postcode
-					.search-results__field.field-group.field-group--buttons
-						input(type="search", placeholder="Enter postcode")
-						button.btn.btn-primary Search&nbsp;&nbsp;
-							i.icon-search
+			//h3 Witness's primary address
+			//fieldset
+				label(for="standardField") Preferred phone number
+				input(id="standardField" placeholder="" type="text")
+			//fieldset
+				label.radio.radio--inline
+					input(checked, name="radio", type="radio", value="option1")
+					| Lookup address
+				label.radio.radio--inline
+					input(name="radio", type="radio", value="option2")
+					| Enter address manually
+
+			//fieldset
+				label(for="field") Enter your postcode
+				.search-results__field.field-group.field-group--buttons
+					input(type="search", placeholder="Enter postcode")
+					button.btn.btn-primary Search&nbsp;&nbsp;
+						i.icon-search
 
 
 			a.btn-light.left-button-icon(href="witness-form-3.html") Back
