--- a/libs/jade/witness-form-5.jade
+++ b/libs/jade/witness-form-5.jade
@@ -16,21 +16,24 @@ block content
 	.articleContent
 		div
 			h2 The trial and the witness’s support needs
+			h3 Defendants details
 			fieldset
 				label(for="standardField") Defendant name(s)
+				span.form-hint Please enter names, seperated using a comma
 				input(id="standardField" placeholder="" type="text")
 
-			fieldset
+			//fieldset
 				label(for="standardField") URN
 				span.form-hint Where this number comes from?
 				input(id="standardField" placeholder="" type="text")
 
 			fieldset
-				label(for="standardField") Offence
+				label(for="standardField") Offence(s) 
+					span.optional (optional)
 				input(id="standardField" placeholder="" type="text")
 
 			fieldset
-				legend(for="radio") Involves domestic violence (DV)?
+				legend(for="radio") Does the case include domestic violence (DV)?
 				label.radio.radio--inline
 					input(name="radio", type="radio", value="option1")
 					| Yes
@@ -38,16 +41,14 @@ block content
 					input(checked, name="radio", type="radio", value="option2")
 					| No
 
+			h3 Location
 			fieldset
 				label(for="exampleSelect1") Court where the trial will be heard
-				.dropdown
-					select#exampleSelect1
-						option Please select
-						option London
-						option Leeds
+				input(id="standardField" placeholder="" type="text")
 	
 			.form-group-date(style="overflow: auto;")
-				legend Date of trial
+				legend Date of trial 
+					span.optional (optional)
 				fieldset
 					label(for="dob-day")
 						span.screenreader What is the witnesses date of birth? Date field,
