--- a/libs/jade/witness-form-7.jade
+++ b/libs/jade/witness-form-7.jade
@@ -15,127 +15,38 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h3 What special measures have been identified, applied for or granted?
+			h3 Special measures
+
 			fieldset
-				legend(for="radio") Screens
+				legend(for="radio") Which process does the witness need support with?
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
+					| Trial only
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
-					| need identified
+					| Sentence only
 				label.radio.radio--block
 					input(name="radio", type="radio", value="option1")
-					| applied for
+					| Trial and sentence
 				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
+					input(checked, name="radio", type="radio", value="option2")
+					| Neither
+
 			fieldset
-				legend(for="radio") Evidence in chief
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
-			fieldset
-				legend(for="radio") Livelink
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
-			fieldset
-				legend(for="radio") Pre-recorded cross examination
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
-			fieldset
-				legend(for="radio") Closed court
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
-			fieldset
-				legend(for="radio") Removal of wigs and gowns
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
-			fieldset
-				legend(for="radio") Intermediary
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
-			fieldset
-				legend(for="radio") Aids to communication
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| don’t know/not needed 
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| need identified
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| applied for
-				label.radio.radio--block
-					input(name="radio", type="radio", value="option1")
-					| granted
+				label(for="exampleTextarea") What special measures have been identified, applied for or granted?
+					span.optional (optional)
+				span.form-hint e.g. screens, evidence in chief, livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary, aids to communication
+				textarea#exampleTextarea(rows="3")
 
 			fieldset
 				label(for="exampleTextarea") Individual support needs, including the support of a specialist at court 
+					span.optional (optional)
 				span.form-hint e.g. an IDVA or intermediary (please give their name and role)
 				textarea#exampleTextarea(rows="3")
 
 			fieldset
-				label(for="exampleTextarea") Individual communication needs and contact preferences
+				label(for="exampleTextarea") Individual communication needs and contact preferences 
+					span.optional (optional)
 				span.form-hint Include the support of an interpreter or other language support (please give their name and role)
 				textarea#exampleTextarea(rows="3")
 
