--- a/libs/jade/witness-form-complete.jade
+++ b/libs/jade/witness-form-complete.jade
@@ -15,22 +15,25 @@ block breadcrumbs
 block content
 	.articleContent
 		div
+			h2 Form submitted
 			.callout--confirmation 
-				h2 Form submitted
-				p Your form has been submitted, your reference number is:
+				p Your form has been submitted, our reference number is, should you need to contact us:
 				h2 1234567
 				p Would you like a copy of your submission?
 				button.btn-secondary.email-button-icon(type="button") Email
 				button.btn-secondary.print-button-icon(type="button") Print
 
+			h2 Make another referral
+			p#[a(href="#") Witness for this case]
+			p#[a(href="#") Witness for a different case]
 
+			.callout--related
+				h3 What happens next?
+				p Someone from the Witness Service will be in touch using the phone number or email below, please add them to your contacts so you know they are calling and so that the email doesn't go into your junk email folder.
 
-			h3 What happens next?
-			p Someone from the Witness Service will be in touch using the phone number or email below, please add them to your contacts so you know they are calling and so that the email doesn't go into your junk email folder.
+				p If you have any questions, you can also use these details to get in touch
 
-			p If you have any questions, you can also use these details to get in touch
-
-			h4 Witness Service call centre
-			p 020 123 4567
-			p #[a(href="#") witness@citizensadvice.org.uk]
-			
+				h4 Witness Service call centre
+				p 020 123 4567
+				p #[a(href="#") witness@citizensadvice.org.uk]
+				
