--- a/libs/jade/witness-form-7.jade
+++ b/libs/jade/witness-form-7.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Witness Service referral form"
+	//- var title = "Witness Service referral form"
 	- var sidebar = true
 	- var toolbars = false
 	- var mockup = true
@@ -32,23 +32,24 @@ block content
 					input(checked, name="radio", type="radio", value="option2")
 					| Neither
 
-			fieldset
+
+			//fieldset
 				label(for="exampleTextarea") What special measures have been identified, applied for or granted?
 					span.optional (optional)
 				span.form-hint e.g. screens, evidence in chief, livelink, pre-recorded cross examination, closed court, removal of wigs and gowns, intermediary, aids to communication
 				textarea#exampleTextarea(rows="3")
 
-			fieldset
+			//fieldset
 				label(for="exampleTextarea") Individual support needs, including the support of a specialist at court 
 					span.optional (optional)
 				span.form-hint e.g. an IDVA or intermediary (please give their name and role)
 				textarea#exampleTextarea(rows="3")
 
-			fieldset
+			//fieldset
 				label(for="exampleTextarea") Individual communication needs and contact preferences 
 					span.optional (optional)
 				span.form-hint Include the support of an interpreter or other language support (please give their name and role)
 				textarea#exampleTextarea(rows="3")
 
 			a.btn-light.left-button-icon(href="witness-form-6.html") Back
-			a.btn.tick-button-icon(href="witness-form-complete.html") Submit
+			a.btn.right-button-icon(href="witness-form-8.html") Next
