Update tool with display list-item

--- a/libs/jade/budgeting-tool-test.jade
+++ b/libs/jade/budgeting-tool-test.jade
@@ -78,29 +78,29 @@ block content
 			ul#section-nav-list(tabindex="-1" style="display:block")
 				li
 					#a.section-nav__parent(href="#",style="display:none;")
-					ol
+					ol(start="0" style="list-style-type:;")
 						li.side-nav-beta__sibling.-visited
-							a(href="#") Start
+							a(href="#" style="display: list-item") Start
 						li.side-nav-beta__sibling.-current
-							a(href="#") Income
+							a(href="#" style="display: list-item") Income
 						li.side-nav-beta__sibling
-							a(href="#") Bills
+							a(href="#" style="display: list-item") Bills
 						li.side-nav-beta__sibling
-							a(href="#") Household
+							a(href="#" style="display: list-item") Household
 						li.side-nav-beta__sibling
-							a(href="#") Leisure
+							a(href="#" style="display: list-item") Leisure
 						li.side-nav-beta__sibling
-							a(href="#") Travel
+							a(href="#" style="display: list-item") Travel
 						li.side-nav-beta__sibling
-							a(href="#") Car
+							a(href="#" style="display: list-item") Car
 						li.side-nav-beta__sibling
-							a(href="#") Child
+							a(href="#" style="display: list-item") Child
 						li.side-nav-beta__sibling
-							a(href="#") Family
+							a(href="#" style="display: list-item") Family
 						li.side-nav-beta__sibling
-							a(href="#") Debt
+							a(href="#" style="display: list-item") Debt
 						li.side-nav-beta__sibling
-							a(href="budgeting-tool-results.html") Results
+							a(href="budgeting-tool-results.html" style="display: list-item") Results
 
 		// Previous mark up used on jade files
 
