Update blog layout

--- a/libs/blog.less
+++ b/libs/blog.less
@@ -49,10 +49,10 @@
 	}
 }
 .blog-column-excerpt {
-	padding: 0 1em;
-	border-left: 1px solid #eee;
-	margin-left: .5rem;
-	h2 {
+	padding: 1rem 1em 1rem 0;
+	border-bottom: 1px solid #eee;
+	margin: 0 .5rem;
+	h2, h3 {
 		margin-top: 0;
 		a {
 			margin-top: 0;
@@ -87,5 +87,17 @@
 		-ms-transform: translateY(-50%);
 		transform: translateY(-50%);
 		right:-12%;
+	}
+}
+
+.small {
+	font-size: 0.875rem;
+}
+
+.articleContent {
+	a {
+		&:hover {
+			background-color: #ffffff !improtant;
+		}
 	}
 }
