--- a/libs/jade/blog-post.jade
+++ b/libs/jade/blog-post.jade
@@ -18,8 +18,11 @@ block content
 	.articleContent
 		div
 			h1(style="margin-top:0.2rem;") Working with advisers to design new PIP content
-			
+
 			p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
+						
+			block toolbars
+				include ../template/toolbar-blog.jade
 
 			p Content is only as good as the advice that sits behind it. The values inherent in that advice come from an understanding of our audience – their goals and their problems. By designing content that focuses on these things we can create something original and valuable that users will engage with and understand.
 
