--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -144,6 +144,8 @@ html
 						a(href="#") The Team
 						a(href="#") About
 						a(href="#") Get involved
+						a(href="#") Jobs
+
 
 			//header.main-header
 				.main-header__content.main-content
