--- a/libs/jade/blog-home-grid.jade
+++ b/libs/jade/blog-home-grid.jade
@@ -15,59 +15,81 @@ block content
 	.articleContent
 		div
 			.row.flex-container
-				.col-xs-12.col-md-4.blog-column-excerpt
-					img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;")
-					h3 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]				
-					p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
-					p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
-					a(href="#" style="border-bottom:none;")
-						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+				.col-xs-12.col-md-3.blog-column-excerpt
+					.cards
+						.card-image-top
+							img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+						.card-text
+							h3 #[a(href="#") Introducing… immigration advice]
+							p We’ve launched immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+				.col-xs-12.col-md-3.blog-column-excerpt
+					.cards
+						.card-image-top
+							img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+						.card-text
+							h3 #[a(href="#") Introducing… immigration advice]
+							p We’ve launched immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+				.col-xs-12.col-md-3.blog-column-excerpt
+					.cards
+						.card-image-top
+							img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+						.card-text
+							h3 #[a(href="#") Introducing… immigration advice]
+							p We’ve launched immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+				.col-xs-12.col-md-3.blog-column-excerpt
+					.cards
+						.card-image-top
+							img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+						.card-text
+							h3 #[a(href="#") Introducing… immigration advice]
+							p We’ve launched immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
 
-				.col-xs-12.col-md-4.blog-column-excerpt
-					h3 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]				
-					p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
-					img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;")
-					p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
-					a(href="#" style="border-bottom:none;")
-						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
-
-				.col-xs-12.col-md-4.blog-column-excerpt
-					h3 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]				
-					img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;")
-					p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
-					a(href="#" style="border-bottom:none;")
-						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
-
-				.col-xs-12.col-md-4.blog-column-excerpt
-					img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;margin-bottom: 10px;")
-					h3 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]				
-					p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
+				.col-xs-12.col-md-3.span4.blog-column-excerpt
+					h2 #[a(href="#") Introducing… immigration advice]
+					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
+					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
 					a(href="#" style="border-bottom:none;")
 						button.btn-secondary.btn-small(type="button") Read full article
+
+
+				.col-xs-12.col-md-3.span4.blog-column-excerpt
+					h2 #[a(href="#") Introducing… immigration advice]
+					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
+					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+					a(href="#" style="border-bottom:none;")
+						button.btn-secondary.btn-small(type="button") Read full article
+
+
+				.col-xs-12.col-md-3.span4.blog-column-excerpt
+					h2 #[a(href="#") Introducing… immigration advice]
+					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
+					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
+					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
+					a(href="#" style="border-bottom:none;")
+						button.btn-secondary.btn-small(type="button") Read full article
+
 			.row
-				.span4.blog-column-excerpt
+				.col-xs-12.col-md-6.span6.blog-column-excerpt
 					h2 #[a(href="#") Introducing… immigration advice]
 					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
 					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
 					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
 					a(href="#" style="border-bottom:none;")
-						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+						button.btn-secondary.btn-small(type="button") Read full article
 
-				.span4.blog-column-excerpt
-					h2 #[a(href="#") Introducing… immigration advice]
-					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
-					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
-					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
-					a(href="#" style="border-bottom:none;")
-						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
 
-				.span4.blog-column-excerpt
+				.col-xs-12.col-md-6.span6.blog-column-excerpt
 					h2 #[a(href="#") Introducing… immigration advice]
 					p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
 					img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
 					p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
 					a(href="#" style="border-bottom:none;")
-						button.btn.btn-primary.right-button-icon(type="button" style="background-color:#81CEC6; border-color:#81CEC6;") Read full article
+						button.btn-secondary.btn-small(type="button") Read full article
+
+
+
 			.row
 				.span12
 					.pagination
