--- a/libs/blog.less
+++ b/libs/blog.less
@@ -2,6 +2,33 @@
  * Blog visual
  */
 
+.team {
+	padding: 1rem;
+	text-align: center;
+}
+.avatar-full img {
+	border-radius: 50% !important;
+	margin-bottom: .75rem !important;
+	box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee !important;
+	//margin: .5rem !important;
+	width: 100% !important;
+	max-width: 200px;
+}
+.avatar-left img {
+	border-radius: 50% !important;
+	margin: 0 1rem .75rem 0 !important;
+	box-shadow: 0 2px 0 0 #eee,0 1px 3px 0 #eee !important;
+	//margin: .5rem !important;
+	width: 100% !important;
+	max-width: 200px;
+	float: right;
+	clear: left;
+}
+
+.avatar-title {
+	text-align: center !important;
+}
+
 .styleguide--header--content-nav a:visited {
 	color: white;
 }
