Fix header search, share visited, print functionality

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -72,7 +72,7 @@ abbr[title]:after {
 .collapse-toggle-close,
 .revealable__close,
 .callout--adviser,
-.dap-panel--adviser
+.dap-panel--adviser,
 #overview,
 nav,
 aside,
