--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -112,7 +112,12 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
             overflow: hidden;
         }
 
-        &:hover, &:focus, &:visited {
+        &:visited {
+            color: @gray-3;
+            text-decoration: none;
+        }
+
+        &:hover, &:focus {
             color: @white;
             text-decoration: none;
 
