--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -138,7 +138,7 @@
 input.main-header__search__input {
     width: 16em;
     float: left;
-    padding: 0.2em;
+    padding: .27em .2em;
 
     .ie8 & {
         padding: .3em .2em;
