Fix breakpoint header issue/svg logo scaling

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -16,7 +16,7 @@
         background-color: @white;
     }
 }
-@media ( max-width: @breakpoint-sm ) {
+@media ( max-width: @screen-xs-max ) {
     .main-header {
         background-color: @heritage-blue;
         overflow: hidden; // Collapsing margin issues
