Amend opening page

--- a/libs/jade/witness-self-form-1.jade
+++ b/libs/jade/witness-self-form-1.jade
@@ -15,18 +15,18 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			p To ensure the Witness Service can effectively contact, needs assess and support witnesses we need as much information as possible with the initial referral.
-			p Sharing the necessary information in the referral document also prevents the witness being asked the same questions again and again; something we know causes distress and frustration.
-			p The referral documentation should be sent to the Witness Service by secure email at least four weeks prior to the trial date (unless the witness is called to give evidence at shorter notice) to enable contact to be made and pre-trial support provided if needed.
+			p The Witness Service supports witnesses who are giving evidence in criminal courts in England or Wales. Whether you are contacting us on behalf of a witness or you are a witness yourself, we can provide practical information and emotional support.
+
+			p Please use this form to get in touch.  We will reply within two working days, usually by phone, in a call that last 10 to 20 minutes.
 
 			fieldset
-				legend(for="radio") Please select if you are referring yourself for the Witness service
+				legend(for="radio") Please select one of the following options
 				label.radio.radio--block
 					input(checked, name="radio", type="radio", value="option1")
-					| I am referring myself, family or friend
+					| I am a witness or I am making contact on behalf of a family member or friend who is a witness
 				label.radio.radio--block
 					input(disabled, name="radio", type="radio", value="option2")
-					| I am an organisation referring on behalf of a client
+					| I work for an organisation that is referring a witness
 
 
 			a.btn.right-button-icon(href="witness-self-form-2.html") Start
