--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -15,10 +15,7 @@
 form small {
     color: @gray-3;
 }
-.optional {
-    color: @gray-2;
-    font-weight: @font-weight-base;
-}
+
 .valid,
 .invalid {
     padding-top: @box-spacing/4;
@@ -291,117 +288,19 @@ textarea.form__field {
         clear: none;
         //float: left;
     }
-}
 
-.radio--conditional {
-    clear: both;
-    float: left;
-    width: 100%;
-    display: table;
-    p {
-        display: block;
-        //float: right;
-        display: table-cell;
-        margin: 0;
-        span {
-            font-weight: @font-weight-bolder;
-        }
-    }
-    input {
-        display: inline-block;
-        &:before {
-            content: '';
+    &--block {
+        clear: left;
+        float: left;
+        display: table;
+        p {
             display: block;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            position: absolute;
-            -webkit-user-select: none;
-            cursor: pointer;
-            border-radius: @form-border-radius;
-            border: 1px solid @gray-6;
-            z-index: -1;
-            background-color: @gray-8;
-            box-sizing: border-box;
-            margin-right: @box-spacing/2;
-        }
-        &:hover:before {
-            border-color: @gray-5;
-        }
-        &:disabled {
-            cursor: not-allowed !important;
-            &:before {
-                cursor: not-allowed !important;
-                background-color: @form-disabled-bg;
-                border-color: @form-disabled-bg;
+            //float: right;
+            display: table-cell;
+            margin: 0;
+            span {
+                font-weight: @font-weight-bold;
             }
-        }
-        &:checked {
-            &:before {
-                border-color: @blue-light;
-                background-color: @heritage-blue-lightest;
-            }
-            &:hover:before {
-                border-color: @blue-light;
-            }
-        }
-        &:focus {
-            outline: 2px solid @heritage-yellow;
-        }
-    }
-}
-.radio--conditional {
-    input:not(checked) ~ .conditional--content {
-            display: none;
-    }
-    input:checked ~ .conditional--content {
-            display: block;
-    }
-}
-
-.conditional--content {
-    input {
-        display: inline-block;
-        &:before {
-            content: '';
-            display: block;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            position: absolute;
-            -webkit-user-select: none;
-            cursor: pointer;
-            border-radius: @form-border-radius;
-            border: 1px solid @gray-6;
-            z-index: -1;
-            background-color: @white;
-            box-sizing: border-box;
-            margin-right: @box-spacing/2;
-        }
-        &:hover:before {
-            border-color: @gray-5;
-        }
-        &:disabled {
-            cursor: not-allowed !important;
-            &:before {
-                cursor: not-allowed !important;
-                background-color: @form-disabled-bg;
-                border-color: @form-disabled-bg;
-            }
-        }
-        &:checked {
-            &:before {
-                border-color: @blue-light;
-                background-color: @blue-lighter;
-            }
-            &:hover:before {
-                border-color: @blue-light;
-            }
-        }
-        &:focus {
-            outline: 2px solid @heritage-yellow;
         }
     }
 }
